--- a/index.html
+++ b/index.html
@@ -877,11 +877,11 @@
 					<a href="#" class="logo">FixApp</a>
 					<nav class="main-nav">
 						<ul>
-							<li><a href="#" class="active">Jak działa</a></li>
-							<li><a href="#">Dla klientów</a></li>
-							<li><a href="#">Dla fachowców</a></li>
-							<li><a href="#">Cennik</a></li>
-							<li><a href="#">Kontakt</a></li>
+							<li>
+								<a href="#szybko-bezpiecznie-id" class="active">Jak działa</a>
+							</li>
+							<li><a href="#to-ty-masz-kontrole-id">Dla klientów</a></li>
+							<li><a href="#kontakt-id">Kontakt</a></li>
 						</ul>
 					</nav>
 					<div class="header-actions">
@@ -948,7 +948,7 @@
 		</section>
 		<section id="section-features" class="features-section">
 			<div class="container">
-				<div class="features-header">
+				<div id="szybko-bezpiecznie-id" class="features-header">
 					<h2>Szybko, bezpiecznie, bez stresu.</h2>
 					<p>
 						FixApp to wygoda, której do tej pory brakowało na rynku usług
@@ -1119,7 +1119,7 @@
 			</div>
 		</section>
 		<section id="section-control" class="control-section">
-			<div class="container">
+			<div id="to-ty-masz-kontrole-id" class="container">
 				<h2>To Ty masz kontrolę</h2>
 				<p class="subtitle">
 					Zbudowaliśmy FixApp tak, byś miał kontrolę i bezpieczeństwo na każdym
@@ -1204,7 +1204,7 @@
 						<span class="highlight-orange">OTRZYMAJ 5% ZNIŻKI</span> na pierwszą
 						usługę!
 					</p>
-					<form class="subscribe-form">
+					<form id="kontakt-id" class="subscribe-form">
 						<div class="email-input-wrapper">
 							<input type="email" placeholder="Twój email" />
 						</div>
