--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
 		<section id="section-testimonials" class="testimonials-section">
 			<div class="container testimonials-container">
 				<div class="testimonials-text">
-					<h2>Konsumenci mówią sami za siebie.</h2>
+					<h2>Ankietowani mówią sami za siebie.</h2>
 					<img src="images/1_414.svg" alt="Decorative underline" />
 				</div>
 				<div class="testimonials-cards">
@@ -1092,23 +1092,21 @@
 							class="author-image"
 						/>
 						<p class="quote">
-							"Awaria pralki w sobotę? Fachowiec był u mnie po 3 godzinach.
-							Nigdy więcej nie będę szukać usług przez ogłoszenia."
+							"Brak prowizji na start mnie przekonał, u konkurencji płatna subskrypcja to standard."
 						</p>
 						<div class="author">
 							<p class="author-name">Adam Kowalski</p>
-							<p class="author-location">Katowice</p>
+							<p class="author-location">Fachowiec</p>
 						</div>
 					</div>
 					<div class="testimonial-card card-front">
 						<img src="images/1_427.svg" alt="Mike Tyson" class="author-image" />
 						<p class="quote">
-							“Wszystko jak w Uberze, ale dla fachowców. Super pomysł – działa
-							błyskawicznie.”
+							“Super pomysł, w zasadzie nie kojarzę żadnego miejsca gdzie mogę zamowic rzetelnego fachowca.”
 						</p>
 						<div class="author">
 							<p class="author-name">Karol Wierzbicki</p>
-							<p class="author-location">Kraków</p>
+							<p class="author-location">Użytkownik</p>
 						</div>
 					</div>
 					<div class="testimonial-arrows">
