--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Generated Page</title>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>FixApp Landing Page</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -194,9 +197,6 @@
 				.subscribe-box {
 					margin-right: 0 !important;
 				}
-				.features-cards-container {
-					flex-direction: column;
-				}
 			}
 
 			/* CSS for section section:partners */
@@ -243,10 +243,10 @@
 					var(--bg-white) 100%
 				);
 				color: var(--bg-white);
-				padding: 100px 5px;
+				padding: 50px 5px 0;
 			}
 			.features-header {
-				max-width: 600px;
+				max-width: 500px;
 				margin-bottom: 60px;
 			}
 			.features-header h2 {
@@ -261,11 +261,19 @@
 				line-height: 1.5;
 				opacity: 0.9;
 			}
-			.features-grid {
-				display: grid;
-				grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+			.many-pluses-img {
+				position: absolute;
+				top: 7%;
+				right: 2%;
+			}
+			.features-cards-container {
+				display: flex;
 				gap: 30px;
-				direction: rtl;
+				margin-bottom: 7px;
+			}
+			.features-cards-container:first-child {
+				margin-left: 30%;
+				margin-bottom: 30px;
 			}
 			.feature-card {
 				background-color: var(--bg-white);
@@ -338,8 +346,8 @@
 				content: "";
 				position: absolute;
 				left: 31px;
-				top: 0;
-				bottom: 0;
+				top: -300px;
+				bottom: 80px;
 				width: 15px;
 				background-color: var(--primary-orange);
 				border-radius: 5px;
@@ -776,7 +784,12 @@
 				width: 100%;
 			}
 			.subscribe-form .btn {
-				padding: 22px 40px;
+				padding: 20px 40px;
+			}
+			@media (max-width: 1200px) {
+				.many-pluses-img {
+					display: none;
+				}
 			}
 			@media (max-width: 768px) {
 				.subscribe-section > .container > h2 {
@@ -868,6 +881,7 @@
 							<li><a href="#">Dla klientów</a></li>
 							<li><a href="#">Dla fachowców</a></li>
 							<li><a href="#">Cennik</a></li>
+							<li><a href="#">Kontakt</a></li>
 						</ul>
 					</nav>
 					<div class="header-actions">
@@ -941,53 +955,65 @@
 						domowych.
 					</p>
 				</div>
+				<img
+					class="many-pluses-img"
+					src="./images/many-pluses.png"
+					width="225"
+				/>
 				<div class="features-grid">
-					<div class="feature-card">
-						<h3>
-							ZLECENIA W <span class="highlight-orange">MNIEJ NIŻ 5 MINUT</span>
-						</h3>
-						<p>
-							W aplikacji, bez potrzeby rozmów telefonicznych czy spisywania
-							danych
-						</p>
+					<div class="features-cards-container">
+						<div class="feature-card">
+							<h3>
+								ZLECENIA W
+								<span class="highlight-orange">MNIEJ NIŻ 5 MINUT</span>
+							</h3>
+							<p>
+								W aplikacji, bez potrzeby rozmów telefonicznych czy spisywania
+								danych
+							</p>
+						</div>
+						<div class="feature-card">
+							<h3>
+								SPRAWDZENI FACHOWCY
+								<span class="highlight-orange">W TWOJEJ OKOLICY</span>
+							</h3>
+							<p>
+								Nasz system geo lokalizacji pokaże Ci dostępnych specjalistów w
+								promieniu kilku kilometrów, gotowych do działania
+							</p>
+						</div>
 					</div>
-					<div class="feature-card">
-						<h3>
-							SPRAWDZENI FACHOWCY
-							<span class="highlight-orange">W TWOJEJ OKOLICY</span>
-						</h3>
-						<p>
-							Nasz system geo lokalizacji pokaże Ci dostępnych specjalistów w
-							promieniu kilku kilometrów, gotowych do działania
-						</p>
-					</div>
-					<div class="feature-card">
-						<h3>
-							PRZEJRZYSTE CENY
-							<span class="highlight-orange">BEZ UKRYTYCH KOSZTÓW</span>
-						</h3>
-						<p>
-							Każda usługa ma jasno określony zakres i widełki cenowe, zanim
-							jeszcze klikniesz "Zamawiam".
-						</p>
-					</div>
-					<div class="feature-card">
-						<h3>
-							REZERWUJESZ <span class="highlight-orange">KIEDY CHCESZ</span>
-						</h3>
-						<p>
-							Integracja z kalendarzem pozwala wybrać termin, który naprawdę Ci
-							pasuje
-						</p>
-					</div>
-					<div class="feature-card">
-						<h3>
-							USŁUGI, KTÓRYM <span class="highlight-orange">MOŻESZ ZAUFAĆ</span>
-						</h3>
-						<p>
-							Oceniani fachowcy i pełna historia zleceń to koniec nieprzyjemnych
-							niespodzianek.
-						</p>
+
+					<div class="features-cards-container">
+						<div class="feature-card">
+							<h3>
+								PRZEJRZYSTE CENY
+								<span class="highlight-orange">BEZ UKRYTYCH KOSZTÓW</span>
+							</h3>
+							<p>
+								Każda usługa ma jasno określony zakres i widełki cenowe, zanim
+								jeszcze klikniesz "Zamawiam".
+							</p>
+						</div>
+						<div class="feature-card">
+							<h3>
+								REZERWUJESZ <span class="highlight-orange">KIEDY CHCESZ</span>
+							</h3>
+							<p>
+								Integracja z kalendarzem pozwala wybrać termin, który naprawdę
+								Ci pasuje
+							</p>
+						</div>
+						<div class="feature-card">
+							<h3>
+								USŁUGI, KTÓRYM
+								<span class="highlight-orange">MOŻESZ ZAUFAĆ</span>
+							</h3>
+							<p>
+								Oceniani fachowcy i pełna historia zleceń to koniec
+								nieprzyjemnych niespodzianek.
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -1180,7 +1206,6 @@
 					</p>
 					<form class="subscribe-form">
 						<div class="email-input-wrapper">
-							<img src="images/1_483.svg" alt="email icon" />
 							<input type="email" placeholder="Twój email" />
 						</div>
 						<button type="submit" class="btn btn-secondary">Subskrybuj</button>
