--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Generated Page</title>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>FixApp Landing Page</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -274,6 +271,12 @@
 			.features-cards-container:first-child {
 				margin-left: 30%;
 				margin-bottom: 30px;
+			}
+			@media (max-width: 768px) {
+				.features-cards-container {
+					flex-direction: column;
+					margin-left: 0;
+				}
 			}
 			.feature-card {
 				background-color: var(--bg-white);
@@ -1092,7 +1095,8 @@
 							class="author-image"
 						/>
 						<p class="quote">
-							"Brak prowizji na start mnie przekonał, u konkurencji płatna subskrypcja to standard."
+							"Brak prowizji na start mnie przekonał, u konkurencji płatna
+							subskrypcja to standard."
 						</p>
 						<div class="author">
 							<p class="author-name">Adam Kowalski</p>
@@ -1102,7 +1106,8 @@
 					<div class="testimonial-card card-front">
 						<img src="images/1_427.svg" alt="Mike Tyson" class="author-image" />
 						<p class="quote">
-							“Super pomysł, w zasadzie nie kojarzę żadnego miejsca gdzie mogę zamowic rzetelnego fachowca.”
+							“Super pomysł, w zasadzie nie kojarzę żadnego miejsca gdzie mogę
+							zamowic rzetelnego fachowca.”
 						</p>
 						<div class="author">
 							<p class="author-name">Karol Wierzbicki</p>
