--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 			@media (max-width: 768px) {
 				.features-cards-container {
 					flex-direction: column;
-					margin-left: 0;
+					margin-left: 0 !important;
 				}
 			}
 			.feature-card {
