--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@
 						>
 					</h2>
 					<p>
-						Z FixApp nie musisz planować napraw z wyprzedzeniem – nasi fachowcy
+						Z FixApp nie musisz planować napraw z wyprzedzeniemXD – nasi fachowcy
 						mają elastyczne grafiki i są gotowi działać, gdy tylko tego
 						potrzebujesz.
 					</p>
