Add data-translate attributes to feature cards for complete translation coverage

--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,7 @@
 								ZLECENIA W
 								<span class="highlight-orange">MNIEJ NIŻ 5 MINUT</span>
 							</h3>
-							<p>
+							<p data-translate="feature-1-desc">
 								W aplikacji, bez potrzeby rozmów telefonicznych czy spisywania
 								danych
 							</p>
@@ -1086,7 +1086,7 @@
 								SPRAWDZENI FACHOWCY
 								<span class="highlight-orange">W TWOJEJ OKOLICY</span>
 							</h3>
-							<p>
+							<p data-translate="feature-2-desc">
 								Nasz system geo lokalizacji pokaże Ci dostępnych specjalistów w
 								promieniu kilku kilometrów, gotowych do działania
 							</p>
@@ -1099,7 +1099,7 @@
 								PRZEJRZYSTE CENY
 								<span class="highlight-orange">BEZ UKRYTYCH KOSZTÓW</span>
 							</h3>
-							<p>
+							<p data-translate="feature-3-desc">
 								Każda usługa ma jasno określony zakres i widełki cenowe, zanim
 								jeszcze klikniesz "Zamawiam".
 							</p>
@@ -1108,7 +1108,7 @@
 							<h3 data-translate="feature-4-title">
 								REZERWUJESZ <span class="highlight-orange">KIEDY CHCESZ</span>
 							</h3>
-							<p>
+							<p data-translate="feature-4-desc">
 								Integracja z kalendarzem pozwala wybrać termin, który naprawdę
 								Ci pasuje
 							</p>
@@ -1118,7 +1118,7 @@
 								USŁUGI, KTÓRYM
 								<span class="highlight-orange">MOŻESZ ZAUFAĆ</span>
 							</h3>
-							<p>
+							<p data-translate="feature-5-desc">
 								Oceniani fachowcy i pełna historia zleceń to koniec
 								nieprzyjemnych niespodzianek.
 							</p>
