Update hero section links and fix feature card translations

--- a/index.html
+++ b/index.html
@@ -1026,7 +1026,7 @@
 							<a href="#subscribe-box" class="btn btn-primary" data-translate="btn-find-specialist"
 								>Znajdź Fachowca</a
 							>
-							<a href="#" class="btn btn-secondary" data-translate="btn-become-specialist">Zostań Fachowcem</a>
+							<a href="#subscribe-box" class="btn btn-secondary" data-translate="btn-become-specialist">Zostań Fachowcem</a>
 						</div>
 					</div>
 					<div class="hero-image-wrapper">
