Set Polish as base language - update HTML lang attribute and default language selector

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -978,11 +978,11 @@
 						<div class="lang-selector">
 							<button class="lang-selector-btn" id="langSelectorBtn">
 								<img
-									src="images/uk.svg"
-									alt="UK flag"
+									src="images/1adf2e6dc9d4f089ffa812bc6fe121f072a348b0.png"
+									alt="Poland flag"
 									class="lang-flag"
 								/>
-								<span class="lang-text">EN</span>
+								<span class="lang-text">PL</span>
 								<img
 									src="images/1_145.svg"
 									alt="Dropdown arrow"
@@ -990,7 +990,7 @@
 								/>
 							</button>
 							<div class="lang-dropdown" id="langDropdown">
-								<button class="lang-option" data-lang="pl">
+								<button class="lang-option active" data-lang="pl">
 									<img
 										src="images/1adf2e6dc9d4f089ffa812bc6fe121f072a348b0.png"
 										alt="Poland flag"
